@@ -103,7 +103,7 @@ namespace NHibernate.Impl
 			using (new SessionIdLoggingContext(SessionId))
 			{
 				var results = new List<object>();
-				List(query, parameters, results);
+				List(query.ToQueryExpression(), parameters, results);
 				return results;
 			}
 		}
@@ -119,7 +119,7 @@ namespace NHibernate.Impl
 			using (new SessionIdLoggingContext(SessionId))
 			{
 				var results = new List<T>();
-				List(query, queryParameters, results);
+				List(query.ToQueryExpression(), queryParameters, results);
 				return results;
 			}
 		}
